@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <item>
-  <title>New version 4.13.4 of Pulse is available.</title>
-  <version>4.13.4</version>
-  <url>http://www.rowetechinc.com/swfw/latest/Pulse/Pulse.Installer.v.4.13.4.Update.exe</url>
+  <title>New version 4.13.5 of Pulse is available.</title>
+  <version>4.13.5</version>
+  <url>http://www.rowetechinc.com/swfw/latest/Pulse/Pulse.Installer.v.4.13.5.Update.exe</url>
   <changelog>http://www.rowetechinc.com/swfw/latest/Pulse/releasenotes.html</changelog>
   <mandatory>true</mandatory>
 </item>
