@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.13.4 ChangeLog</title>
+		<title>Version 4.13.5 ChangeLog</title>
 		<style type="text/css">
             .auto-style1 {
 	            text-decoration: underline;
@@ -11,8 +11,12 @@
 	<body>
         <p>
             <br /><span class="auto-style1">Pulse-4.13.4</span>
+            <br />  Pulse-4.13.5
+            <br />  * Fixed bug when Bottom Track is NaN and removing ship speed.
+            <br />
             <br />  Pulse-4.13.4
             <br />  - Added options to turn on or off MarkBadBelowBottom and MarkBadAboveSurface for Amplitude and Correlation.
+            <br />
             <br />  Pulse-4.13.3
             <br />  * Only apply VM Heading or Tilt offset if value is given.
             <br />  * In Transform, check if the ADCP has more than 3 beams (SeaSEVEN).
@@ -273,7 +277,10 @@
             <br />   - In ScreenDataViewModel, added FillInMissingWpData() to fill in data when Water Profile is turned off.
             <br />   - Change the images in PlaybackView.xaml to VisualBrushes.  This decreased startup time dramatically.
             <br />   - In DistanceTraveled, in AccumulateGps() verify a good _FirstGpsPos is set.
-            <br /><span class="auto-style1">RTI-3.4.19</span>
+            <br /><span class="auto-style1">RTI-3.4.20</span>
+            <br />   RTI-3.4.20
+            <br />   - Check for NaN in Bottom Track velocity when removing ship speed.
+            <br />
             <br />   RTI-3.4.19
             <br />   - In ScreenMarkBadBelowBottom and ScreenMarkBadAboveSurface added options to turn on or off MarkBadBelowBottom for Amplitude and Correlation.
             <br />
